Refactor API catalog classes