@@ -32,6 +32,8 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import com.google.common.collect.Lists;
+import io.airbyte.api.model.AirbyteCatalog;
+import io.airbyte.api.model.AirbyteStreamAndConfiguration;
 import io.airbyte.api.model.AttemptRead;
 import io.airbyte.api.model.AttemptStatus;
 import io.airbyte.api.model.ConnectionIdRequestBody;
@@ -40,7 +42,6 @@ import io.airbyte.api.model.ConnectionReadList;
 import io.airbyte.api.model.ConnectionSchedule;
 import io.airbyte.api.model.ConnectionStatus;
 import io.airbyte.api.model.ConnectionUpdate;
-import io.airbyte.api.model.DataType;
 import io.airbyte.api.model.DestinationIdRequestBody;
 import io.airbyte.api.model.DestinationRead;
 import io.airbyte.api.model.JobConfigType;
@@ -53,9 +54,6 @@ import io.airbyte.api.model.JobWithAttemptsRead;
 import io.airbyte.api.model.SourceDiscoverSchemaRead;
 import io.airbyte.api.model.SourceIdRequestBody;
 import io.airbyte.api.model.SourceRead;
-import io.airbyte.api.model.SourceSchema;
-import io.airbyte.api.model.SourceSchemaField;
-import io.airbyte.api.model.SourceSchemaStream;
 import io.airbyte.api.model.SyncMode;
 import io.airbyte.api.model.WbConnectionRead;
 import io.airbyte.api.model.WbConnectionReadList;
@@ -68,6 +66,9 @@ import io.airbyte.config.StandardDestinationDefinition;
 import io.airbyte.config.StandardSourceDefinition;
 import io.airbyte.config.StandardSync;
 import io.airbyte.config.persistence.ConfigNotFoundException;
+import io.airbyte.protocol.models.CatalogHelpers;
+import io.airbyte.protocol.models.Field;
+import io.airbyte.protocol.models.Field.JsonSchemaPrimitive;
 import io.airbyte.server.helpers.ConnectionHelpers;
 import io.airbyte.server.helpers.DestinationDefinitionHelpers;
 import io.airbyte.server.helpers.DestinationHelpers;
@@ -164,18 +165,7 @@ class WebBackendConnectionsHandlerTest {
         .lastSync(now.getEpochSecond())
         .isSyncing(false);
 
-    final SourceSchemaField field = new SourceSchemaField()
-        .dataType(DataType.NUMBER)
-        .name("id")
-        .cleanedName("id")
-        .selected(true);
-
-    final SourceSchemaStream stream = new SourceSchemaStream()
-        .cleanedName("users")
-        .name("users")
-        .fields(Lists.newArrayList(field));
-
-    final SourceSchema modifiedSchema = new SourceSchema().streams(Lists.newArrayList(stream));
+    final AirbyteCatalog modifiedSchema = ConnectionHelpers.generateBasicApiCatalog();
 
     when(schedulerHandler.discoverSchemaForSourceFromSourceId(sourceIdRequestBody)).thenReturn(
         new SourceDiscoverSchemaRead()
@@ -248,9 +238,8 @@ class WebBackendConnectionsHandlerTest {
     final SourceConnection source = SourceHelpers.generateSource(UUID.randomUUID());
     final StandardSync standardSync = ConnectionHelpers.generateSyncWithSourceId(source.getSourceId());
 
-    final SourceSchema newApiSchema = ConnectionHelpers.generateBasicApiSchema();
-    newApiSchema.getStreams().get(0).setName("azkaban_users");
-    newApiSchema.getStreams().get(0).cleanedName("azkaban_users");
+    final AirbyteCatalog newApiSchema = ConnectionHelpers.generateBasicApiCatalog();
+    newApiSchema.getStreams().get(0).getStream().setName("azkaban_users");
 
     final ConnectionSchedule schedule = new ConnectionSchedule().units(1L).timeUnit(ConnectionSchedule.TimeUnitEnum.MINUTES);
 
@@ -343,106 +332,137 @@ class WebBackendConnectionsHandlerTest {
   }
 
   @Test
-  public void testUpdateSchemaWithDiscovery() {
-    final SourceSchema original = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.INCREMENTAL)
-                .cursorField(List.of("field2"))
-                .defaultCursorField(List.of("field1"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.NUMBER)
-                        .selected(true),
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.NUMBER)
-                        .selected(true),
-                    new SourceSchemaField()
-                        .name("field5")
-                        .cleanedName("field5")
-                        .dataType(DataType.STRING)
-                        .selected(true)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.INCREMENTAL, SyncMode.FULL_REFRESH))));
-    final SourceSchema discovered = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .defaultCursorField(List.of("field3"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.STRING)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
-    final SourceSchema expected = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .cursorField(List.of("field2"))
-                .defaultCursorField(List.of("field3"))
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field2")
-                        .cleanedName("field2")
-                        .dataType(DataType.STRING)
-                        .selected(true)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
+  public void testUpdateSchemaWithDiscoveryFromEmpty() {
+    final AirbyteCatalog original = new AirbyteCatalog().streams(List.of());
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field1", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    discovered.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream1");
 
-    final SourceSchema actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field1", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    expected.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream1");
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
 
     assertEquals(expected, actual);
   }
 
   @Test
-  public void testUpdateSchemaWithDiscoveryNewTable() {
-    final SourceSchema original = new SourceSchema().streams(List.of());
-    final SourceSchema discovered = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.STRING)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
-    final SourceSchema expected = new SourceSchema()
-        .streams(List.of(
-            new SourceSchemaStream()
-                .name("stream1")
-                .cleanedName("stream1")
-                .syncMode(SyncMode.FULL_REFRESH)
-                .fields(List.of(
-                    new SourceSchemaField()
-                        .name("field1")
-                        .cleanedName("field1")
-                        .dataType(DataType.STRING)
-                        .selected(null)))
-                .selected(true)
-                .sourceDefinedCursor(false)
-                .supportedSyncModes(List.of(SyncMode.FULL_REFRESH))));
+  public void testUpdateSchemaWithDiscoveryResetStream() {
+    final AirbyteCatalog original = ConnectionHelpers.generateBasicApiCatalog();
+    original.getStreams().get(0).getStream()
+        .name("random-stream")
+        .defaultCursorField(List.of("field1"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(
+            Field.of("field1", JsonSchemaPrimitive.NUMBER),
+            Field.of("field2", JsonSchemaPrimitive.NUMBER),
+            Field.of("field5", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    original.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .cleanedName("random_stream");
 
-    final SourceSchema actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    discovered.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream1");
+
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    expected.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream1");
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
+
+    assertEquals(expected, actual);
+  }
+
+  @Test
+  public void testUpdateSchemaWithDiscoveryMergeNewStream() {
+    final AirbyteCatalog original = ConnectionHelpers.generateBasicApiCatalog();
+    original.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field1"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(
+            Field.of("field1", JsonSchemaPrimitive.NUMBER),
+            Field.of("field2", JsonSchemaPrimitive.NUMBER),
+            Field.of("field5", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    original.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .cleanedName("renamed_stream");
+
+    final AirbyteCatalog discovered = ConnectionHelpers.generateBasicApiCatalog();
+    discovered.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    discovered.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream1");
+    final AirbyteStreamAndConfiguration newStream = ConnectionHelpers.generateBasicApiCatalog().getStreams().get(0);
+    newStream.getStream()
+        .name("stream2")
+        .defaultCursorField(List.of("field5"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field5", JsonSchemaPrimitive.BOOLEAN)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    newStream.getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream2");
+    discovered.getStreams().add(newStream);
+
+    final AirbyteCatalog expected = ConnectionHelpers.generateBasicApiCatalog();
+    expected.getStreams().get(0).getStream()
+        .name("stream1")
+        .defaultCursorField(List.of("field3"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field2", JsonSchemaPrimitive.STRING)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH, SyncMode.INCREMENTAL));
+    expected.getStreams().get(0).getConfiguration()
+        .syncMode(SyncMode.INCREMENTAL)
+        .cursorField(List.of("field1"))
+        .cleanedName("renamed_stream");
+    final AirbyteStreamAndConfiguration expectedNewStream = ConnectionHelpers.generateBasicApiCatalog().getStreams().get(0);
+    expectedNewStream.getStream()
+        .name("stream2")
+        .defaultCursorField(List.of("field5"))
+        .jsonSchema(CatalogHelpers.fieldsToJsonSchema(Field.of("field5", JsonSchemaPrimitive.BOOLEAN)))
+        .supportedSyncModes(List.of(SyncMode.FULL_REFRESH));
+    expectedNewStream.getConfiguration()
+        .syncMode(SyncMode.FULL_REFRESH)
+        .cursorField(Collections.emptyList())
+        .cleanedName("stream2");
+    expected.getStreams().add(expectedNewStream);
+
+    final AirbyteCatalog actual = WebBackendConnectionsHandler.updateSchemaWithDiscovery(original, discovered);
 
     assertEquals(expected, actual);
   }
